Fixed most of the issue with photo scaling on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,27 +29,27 @@ section, summary, time, mark, audio, video {
 
 #floatingR {
 float: right;    
-  margin-top: 15px;
-  margin-left: 15px;
+  margin-top: .25em;
+  margin-left: .25em;
   margin-right: 0;
-  margin-bottom: 15px;
+  margin-bottom: .25em;
 }
 
 #floatingL {
 float: left;    
-  margin-top: 15px;
+  margin-top: .25em;
   margin-left: 0;
-  margin-right: 15px;
-  margin-bottom: 15px;
+  margin-right: .25em;
+  margin-bottom: .25em;
 }
 
 
 #floatC {
   display: block;
-  margin-top: 15px;
+  margin-top: .25em;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 15px;
+  margin-bottom: .25em;
 }
 
 html, body, div, span, applet, object,
